--- a/package.json
+++ b/package.json
@@ -34,10 +34,9 @@
   "author": "Kentico",
   "license": "MIT",
   "dependencies": {
-    "@kentico/kontent-cli": "^0.0.11",
-    "@kentico/kontent-management": "^0.4.10",
-    "dotenv": "^8.2.0",
-    "rxjs": "^6.5.5"
+    "@kentico/kontent-cli": "^0.0.10",
+    "@kentico/kontent-management": "^1.0.0-next.0",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "husky": "^4.2.5",
