--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,5 @@ jobs:
         with:
           node-version: 14.x
       - run: npm ci
-      - run: npm run lint
+      - run: npm run lint-check
       - run: npm run build
