--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   "author": "Kentico",
   "license": "MIT",
   "dependencies": {
-    "@kentico/kontent-cli": "^0.0.10",
-    "@kentico/kontent-management": "^1.0.0-next.3",
+    "@kentico/kontent-cli": "^0.1.0-next.1",
+    "@kentico/kontent-management": "^1.0.0-next.5",
     "dotenv": "^8.2.0"
   },
   "devDependencies": {
