--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kontent-migrations-boilerplate",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "Boilerplate with migration samples",
   "main": "index.ts",
   "scripts": {
@@ -36,8 +36,8 @@
   "author": "Kentico",
   "license": "MIT",
   "dependencies": {
-    "@kentico/kontent-cli": "^0.1.0",
-    "@kentico/kontent-management": "^1.7.0",
+    "@kentico/kontent-cli": "0.3.0",
+    "@kentico/kontent-management": "^2.0.2",
     "dotenv": "^8.2.0"
   },
   "devDependencies": {
