--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "author": "Kontent s.r.o.",
   "license": "MIT",
   "dependencies": {
-    "@kontent-ai/cli": "^0.6.0-next.2",
+    "@kontent-ai/cli": "^0.6.0",
     "@kontent-ai/management-sdk": "^3.1.0",
     "dotenv": "^16.0.2"
   },
