--- a/package.json
+++ b/package.json
@@ -1,44 +1,50 @@
 {
-  "name": "kontent-migrations-boilerplate",
-  "version": "2.0.0",
-  "description": "Boilerplate with migration samples",
-  "main": "index.ts",
-  "scripts": {
-    "migrate:all": "tsc && kontent migration run --all --environment DEV",
-    "migrate:range": "tsc && kontent migration run --environment DEV --range",
-    "migrate": "tsc && kontent migration run --environment DEV -n",
-    "lint": "eslint --fix \"Migrations/*.ts\" && prettier --write \"Migrations/**/*.ts\"",
-    "lint-check": "eslint \"Migrations/*.ts\" && prettier --check \"Migrations/**/*.ts\"",
-    "build": "tsc",
-    "watch": "tsc -w",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "npx eslint --fix",
-      "npx prettier --write"
-    ]
-  },
-  "keywords": [
-    "migrations",
-    "kontent",
-    "cli"
-  ],
-  "author": "Kontent s.r.o.",
-  "license": "MIT",
-  "dependencies": {
-    "@kontent-ai/cli": "^0.6.0",
-    "@kontent-ai/management-sdk": "^3.1.0",
-    "dotenv": "^16.0.2"
-  },
-  "devDependencies": {
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
-    "eslint": "^8.22.0",
-    "eslint-config-prettier": "^8.5.0",
-    "typescript": "^4.8.2"
-  }
+	"name": "kontent-migrations-boilerplate",
+	"version": "2.0.0",
+	"description": "Boilerplate with migration samples",
+	"main": "index.ts",
+	"scripts": {
+		"migrate:all": "tsc && kontent migration run --all --environment DEV",
+		"migrate:range": "tsc && kontent migration run --environment DEV --range",
+		"migrate": "tsc && kontent migration run --environment DEV -n",
+		"generate:models": "ts-node ./scripts/generate-models.ts",
+		"lint": "eslint --fix \"Migrations/*.ts\" && prettier --write \"Migrations/**/*.ts\"",
+		"lint-check": "eslint \"Migrations/*.ts\" && prettier --check \"Migrations/**/*.ts\"",
+		"build": "tsc",
+		"watch": "tsc -w",
+		"prepare": "husky install"
+	},
+	"lint-staged": {
+		"*.ts": [
+			"npx eslint --fix",
+			"npx prettier --write"
+		]
+	},
+	"keywords": [
+		"migrations",
+		"kontent",
+		"cli"
+	],
+	"author": "Kontent s.r.o.",
+	"license": "MIT",
+	"dependencies": {
+		"@kontent-ai/cli": "^0.6.0",
+		"@kontent-ai/core-sdk": "^10.0.0",
+		"@kontent-ai/delivery-sdk": "^12.2.0",
+		"@kontent-ai/management-sdk": "^3.1.0",
+		"@kontent-ai/model-generator": "^5.7.0",
+		"dotenv": "^16.0.2",
+		"ts-node": "^10.9.1"
+	},
+	"devDependencies": {
+		"@types/node": "^18.8.1",
+		"@typescript-eslint/eslint-plugin": "^5.33.1",
+		"@typescript-eslint/parser": "^5.33.1",
+		"eslint": "^8.22.0",
+		"eslint-config-prettier": "^8.5.0",
+		"husky": "^8.0.1",
+		"lint-staged": "^13.0.3",
+		"prettier": "^2.7.1",
+		"typescript": "^4.8.2"
+	}
 }
