--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,16 +11,16 @@
     "outDir": "./Migrations/",
     "strict": true,
     "declaration": false,
-    "rootDir": "./Migrations",
+    "rootDir": "./",
     "moduleResolution": "node",
     "alwaysStrict": true,
     "strictPropertyInitialization": true,
     "forceConsistentCasingInFileNames": true,
     "noUnusedParameters": false,
     "noUnusedLocals": true,
-    "strictFunctionTypes": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
+    "strictFunctionTypes": false,
+    "noImplicitAny": false,
+    "noImplicitReturns": false,
     "declarationMap": false,
     "typeRoots": [
       "./node_modules/@types"
