--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"migrate:all": "npm run clean && tsc && kontent migration run --all --environment DEV",
 		"migrate:range": "npm run clean && tsc && kontent migration run --environment DEV --range",
 		"migrate": "npm run clean && tsc && kontent migration run --environment DEV -n",
+		"migrate:prod": "npm run clean && tsc && kontent migration run --environment PROD -n",
 		"generate:models": "ts-node ./src/scripts/generate-models.ts",
 		"lint": "eslint --fix \"Migrations/*.ts\" && prettier --write \"Migrations/**/*.ts\"",
 		"lint-check": "eslint \"Migrations/*.ts\" && prettier --check \"Migrations/**/*.ts\"",
