--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"migrate:range": "npm run clean && tsc && kontent migration run --environment DEV --range",
 		"migrate": "npm run clean && tsc && kontent migration run --environment DEV -n",
 		"migrate:prod": "npm run clean && tsc && kontent migration run --environment PROD -n",
-		"generate:models": "ts-node ./src/scripts/generate-models.ts",
+		"regenerate:models": "ts-node ./src/scripts/generate-models.ts",
 		"lint": "eslint --fix \"Migrations/*.ts\" && prettier --write \"Migrations/**/*.ts\"",
 		"lint-check": "eslint \"Migrations/*.ts\" && prettier --check \"Migrations/**/*.ts\"",
 		"build": "tsc",
@@ -30,8 +30,8 @@
 	"author": "Kontent s.r.o.",
 	"license": "MIT",
 	"dependencies": {
-		"@kontent-ai/cli": "^0.6.0",
-		"@kontent-ai/core-sdk": "^10.0.0",
+		"@kontent-ai/cli": "^0.8.1",
+		"@kontent-ai/core-sdk": "^10.2.0",
 		"@kontent-ai/delivery-sdk": "^12.2.0",
 		"@kontent-ai/management-sdk": "^5.2.0",
 		"@kontent-ai/model-generator": "^5.7.0",
