--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
+  "include": ["src/**/*"],
   "exclude": [
     "node_modules",
     "Migrations/*.js"
